# Multi-Channel-Inventory

./: .gitignore  README.md  README_ADDON.txt  RUN_GUIDE.md
api-gateway/: envoy.yaml
apps/desktop/: README.md  main.js  package.json  preload.js
apps/desktop/public/: index.html
apps/desktop/scripts/: run-electron.cjs
apps/mobile/: App.tsx  README.md  app.json  package.json
deploy/: docker-compose.yml
deploy/seed/: 00_schema.sql
integrations/shopify/: README.md  package.json
integrations/shopify/src/: sync.js  webhook.js
integrations/wordpress/: README.md
integrations/wordpress/omnistock-live-stock/: omnistock-live-stock.php
proto/: inventory.proto  orders.proto
services/common/: redis_lock.h
services/inventory_svc/: CMakeLists.txt  Dockerfile  conanfile.txt
services/inventory_svc/src/: main.cpp
services/orders_svc/: CMakeLists.txt  Dockerfile  conanfile.txt
services/orders_svc/src/: main.cpp
services/sync_svc/: README.md
web/: Dockerfile  next-env.d.ts  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
web/scripts/: run-next.cjs
